src/objects/Asset_Management__c.object
<CustomObject>
    <fields>
        <fullName>AM_AM_agreement_current_through__c</fullName>
        <label>AM - AM Agreement Current Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Annual_Permit_Compliance_Review__c</fullName>
        <label>AM - Annual Permit Compliance Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Attic_stock_records_last_verified__c</fullName>
        <label>AM - Attic stock records - last verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_COI_Valid_through__c</fullName>
        <label>AM - COI Valid through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Last_Annual_Plan_Update__c</fullName>
        <label>AM - Last Annual Plan Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Next_Quarterly_Review_due__c</fullName>
        <label>AM - Next Quarterly Review due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anchor_PPA_Rate_Escalator__c</fullName>
        <label>Anchor PPA Rate Escalator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Submitted__c</fullName>
        <label>Application Submitted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Anchor_PPA_Rate__c</fullName>
        <label>Current Anchor PPA Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Lease_Amount__c</fullName>
        <label>Current Lease Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy_Contracts_Overview__c</fullName>
        <label>Energy Contracts Overview</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Monthly_Report_Received__c</fullName>
        <label>Last Monthly Report Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_NEPOOL_GIS_Check__c</fullName>
        <label>Last NEPOOL GIS Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_by_Anchor__c</fullName>
        <label>Last Payment by Anchor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Quarterly_Report_Received__c</fullName>
        <label>Last Quarterly Report Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_SREC_Agreement_Compliance_Review__c</fullName>
        <label>Last SREC Agreement Compliance Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_SREC_Mint_Amount__c</fullName>
        <label>Last SREC Mint Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_SREC_Mint_Date__c</fullName>
        <label>Last SREC Mint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_annual_Compliance_Filing__c</fullName>
        <label>Last annual Compliance Filing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Origination_Date__c</fullName>
        <label>Lease Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Schedule_Exists__c</fullName>
        <label>Lease Payment Schedule Exists</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Payment_Schedule_Reconciled__c</fullName>
        <label>Lease Payment Schedule Reconciled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Renewal_Deadline__c</fullName>
        <label>Lease Renewal Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Term_Expiration_Date_Primary__c</fullName>
        <label>Lease Term Expiration Date (Primary)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifetime_SREC_Mint_Amount__c</fullName>
        <label>Lifetime SREC Mint Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Annual_Cmplnce_Filing_No_Earlier__c</fullName>
        <label>Next Annual Cmplnce Filing, No Earlier</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Annual_Cmplnce_Filing_No_Later__c</fullName>
        <label>Next Annual Cmplnce Filing, No Later</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Annual_Plan_Due__c</fullName>
        <label>Next Annual Plan Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Annual_Report_Due__c</fullName>
        <label>Next Annual Report Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Bill_Issued_to_Anchor__c</fullName>
        <label>Next Bill Issued to Anchor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Lease_Escalation_Date__c</fullName>
        <label>Next Lease Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Lease_Payment_Due__c</fullName>
        <label>Next Lease Payment Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Monthly_Report_Due__c</fullName>
        <label>Next Monthly Report Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Personal_Property_Tax_Payment_Amoun__c</fullName>
        <label>Next Personal Property Tax Payment Amoun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Personal_Property_Tax_Payment_Date__c</fullName>
        <label>Next Personal Property Tax Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Quarterly_Report_Due__c</fullName>
        <label>Next Quarterly Report Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Real_Property_Tax_Payment_Amount__c</fullName>
        <label>Next Real Property Tax Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Real_Property_Tax_Payment_Date__c</fullName>
        <label>Next Real Property Tax Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_SREC_Mint_Date__c</fullName>
        <label>Next SREC Mint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_M_Last_BlueWave_Site_Inspection__c</fullName>
        <label>O&amp;M - Last BlueWave Site Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_M_Last_PM_Visit__c</fullName>
        <label>O&amp;M - Last PM Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_M_PM_Visit_Frequency__c</fullName>
        <label>O&amp;M - PM Visit Frequency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Tax_Payment_Frequency__c</fullName>
        <label>Personal Property Tax Payment Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Tax_Schedule_Exists__c</fullName>
        <label>Personal Property Tax Schedule Exists</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_estate_tax_payments__c</fullName>
        <label>Real estate tax payments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SREC_Contracts_Overview__c</fullName>
        <label>SREC Contracts Overview</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Forward_Contract_Term__c</fullName>
        <label>SREC Forward Contract Term:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Primary_Contact_Business__c</fullName>
        <label>SREC Primary Contact Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Primary_Contact_Email__c</fullName>
        <label>SREC Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SREC_Primary_Contact_Name__c</fullName>
        <label>SREC Primary Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Primary_Contact_Party__c</fullName>
        <label>SREC Primary Contact Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Primary_Contact_Phone__c</fullName>
        <label>SREC Primary Contact Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Schedule_Last_Update__c</fullName>
        <label>SREC Schedule Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC_Schedule_in_Place__c</fullName>
        <label>SREC Schedule in Place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Agreement_PILOT_In_place__c</fullName>
        <label>Tax Agreement (PILOT) In place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treasury_RFI_2_Response__c</fullName>
        <label>Treasury RFI 2 Response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Treasury_RFI_2__c</fullName>
        <label>Treasury RFI 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Treasury_RFI_Response__c</fullName>
        <label>Treasury RFI Response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Treasury_RFI__c</fullName>
        <label>Treasury RFI</label>
        <type>Date</type>
    </fields>
    <label>Asset Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asset Managment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>